Cleanup and added restart game feature.  Added game builder service.

--- a/Home/Home.css
+++ b/Home/Home.css
@@ -24,6 +24,11 @@
     background-color: #009ce3;
 }
 
+.hudl-button2{
+    color: white;
+    background-color: #ff6500;
+}
+
 .score-board{
     border-color: #009ce3;
 }
